--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "afonsosilva97.github.io",
   "version": "0.1.0",
-  "homepage": "https://afonsosilva97.github.io",
+  "homepage": "https://afonsosilva97.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
