--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "sass": "^1.49.0",
@@ -42,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-reveal": "^1.2.2"
   }
 }
