--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.22",
     "gh-pages": "^3.2.3",
+    "prettier": "^3.3.3",
     "react-reveal": "^1.2.2",
     "typescript": "^4.5.5"
   }
