--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -b dev -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -50,5 +50,6 @@
     "prettier": "^3.3.3",
     "react-reveal": "^1.2.2",
     "typescript": "^4.5.5"
-  }
+  },
+  "packageManager": "yarn@4.5.1"
 }
