--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "@types/react-scroll": "^1.8.10",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "sass": "^1.49.0",
     "web-vitals": "^2.1.4"
@@ -43,13 +44,16 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "@types/styled-components": "^5.1.22",
     "gh-pages": "^3.2.3",
     "prettier": "^3.3.3",
-    "react-reveal": "^1.2.2",
     "typescript": "^4.5.5"
   },
-  "packageManager": "yarn@4.5.1"
+  "packageManager": "yarn@4.5.1",
+  "resolutions": {
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0"
+  }
 }
